2012-03-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLocale.m (GSDefaultLanguageLocale): Add missing check
	for LC_MESSAGES definition.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Compatribility fix ... copy strings implicitly
	when taking a substring of a string whose buffer is not owned.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLConnection.m: Compatibility fix for bug #35686
	In this case Cocoa breaks its own convention about delegates
	not being retained, so we need to do the same.

2012-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/config.h.in: add missing ICU headers
	* Source/NSString.m: fix minor coding standard violations.

2012-03-01  Jens Alfke <jens@mooseyard.com>

	* Source/NSString.m:
	* Source/NSURL.m:
	Fix decoding of percent escapes with uppercase hex values
	(bug #35685)

2012-03-01  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSString.m: Implement a codepath using ICU for
	-compare:options:range:locale: and
	-rangeOfString:options:range:locale: when a non-nil locale
	is provided.
	* Headers/Foundation/NSString.h (-compare:options:range:locale:):
	Change type of locale parameter to id; it can be NSDictionary or
	NSLocale.
	* configure.ac: add some ICU headers used in NSString change
	* configure: regenerate

2012-03-01  Graham Lee

	* Source/GSNetworks.h: import GSPrivate.h

2012-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURLResponse.h:
	* Source/NSURLResponse.m:
	Implement new initialiser from 10.7

2012-03-01  Jens Alfke <jens@mooseyard.com>

	* Source/NSJSONSerialization.m:
	Use %g for numeric output format.

2012-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSRunLoopWatcher.h:
	* Source/NSXMLPrivate.h:
	* Source/GSRunLoopCtxt.h:
	* Source/common.h:
	* Source/Additions/NSError+GNUstepBase.m:
	* Source/GSURLPrivate.h:
	Include config.h via common.h ... and have that turn off _GNU_SOURCE